manifest/docker/deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apisix-agentconf-api
  namespace: n9e
  annotations:
    kubernetes.io/ingress.class: "apisix"
    k8s.apisix.apache.org/http-to-https: "true"
spec:
  rules:
    - host: nconf.shengtian.com
      http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              serviceName: agentconf-api
              servicePort: 80
    - host: nconf.shengtian.com
      http:
        paths:
          - path: /config/categraf*
            pathType: ImplementationSpecific
            backend:
              serviceName: agentconf-api
              servicePort: 80
    - host: nconf.shengtian.com
      http:
        paths:
          - path: /ping
            pathType: ImplementationSpecific
            backend:
              serviceName: agentconf-api
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: agentconf-api
  namespace: n9e
  labels:
    app: agentconf-api
spec:
  ports:
    - port: 80
      targetPort: 8888
      protocol: TCP
      name: http
  selector:
    app: agentconf-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agentconf-api
  namespace: n9e
  labels:
    app: agentconf-api
spec:
  selector:
    matchLabels:
      app: agentconf-api
  replicas: 1
  template:
    metadata:
      labels:
        app: agentconf-api
    spec:
      containers:
        - name: agentconf-api
          image: harbor-dg.shengtian.com/n9e/agentconf-api:v0.0.2
          imagePullPolicy: Always
          ports:
            - name: liveness-port
              containerPort: 8888
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /ping
              port: liveness-port
            failureThreshold: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /ping
              port: liveness-port
            periodSeconds: 30
            failureThreshold: 3
          resources:
            limits:
              cpu: 2
              memory: "2Gi"
            requests:
              cpu: 0.1
              memory: "128Mi"
          volumeMounts:
            - mountPath: /webser/app/agentconf-api/config.release.yaml
              name: n9e-conf
              subPath: config.release.yaml
      volumes:
        - configMap:
            defaultMode: 493
            name: n9e-conf
          name: n9e-conf
          #       - name: n9e-conf
          # secret:
          #   secretName: n9e-conf
